# AIT

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
config/: default.yaml
docs/: architecture.md
src/autonomous_trading_researcher/: __init__.py  cli.py  config.py  logging_utils.py
src/autonomous_trading_researcher/backtesting/: __init__.py  costs.py  engine.py  metrics.py  rules.py  statistics.py  validation.py  vectorized.py
src/autonomous_trading_researcher/core/: __init__.py  enums.py  exceptions.py  models.py
src/autonomous_trading_researcher/execution/: __init__.py  broker.py  ccxt_execution.py  ensemble.py  order_manager.py  paper.py  paper_broker.py
src/autonomous_trading_researcher/features/: calculators.py  feature_pipeline.py  feature_sets.py  microstructure.py  pipeline.py  registry.py
src/autonomous_trading_researcher/infra/: __init__.py
src/autonomous_trading_researcher/monitoring/: __init__.py  health.py  service.py
src/autonomous_trading_researcher/orchestration/: __init__.py  autonomous_loop.py
src/autonomous_trading_researcher/research/: __init__.py  agent.py  discovery.py  experiment_db.py  generator.py  genetic_evolution.py  ranking.py  strategy_generator.py
tests/: conftest.py  test_autonomous_loop.py  test_backtesting.py  test_data_storage.py  test_feature_pipeline.py  test_genetic_evolution.py  test_ingestion.py  test_microstructure.py  test_research_discovery.py  test_risk_execution.py  test_statistics_ensemble.py  test_strategies.py  test_strategy_generator.py
(+27 files in other folders)
